bk_ida/gobmkida/c0/propagate_worm
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/propagate_worm/src/engine/worm.c:1652:48: error: use of undeclared identifier 'worm_data'
memcpy( &worm[stones[k]], &worm[posa], sizeof( worm_data)); 
                                               ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/propagate_worm/src/obj/1/worm.o] Error 1
